--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -25,7 +25,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="#888888"/>
+            android:background="?attr/separator_color"/>
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/main_tablayout"
