--- a/app/src/main/res/values/theme_attrs.xml
+++ b/app/src/main/res/values/theme_attrs.xml
@@ -4,4 +4,6 @@
     <attr name="edge_color" format="color" />
     <attr name="background_color" format="color" />
     <attr name="highlight_color" format="color" />
+    <attr name="separator_color" format="color" />
+
 </resources>
