--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,8 @@
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="text_margin">16dp</dimen>
+    
+    <dimen name="mylistview_item_padding">10dp</dimen>
+    <dimen name="mylistview_item_height">100dp</dimen>
+    <dimen name="mylistview_item_titlesize">20dp</dimen>
 </resources>
