--- a/app/src/main/res/layout/mylistview_item.xml
+++ b/app/src/main/res/layout/mylistview_item.xml
@@ -32,14 +32,13 @@
 
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="@dimen/mylistview_item_height"
-        android:padding="@dimen/mylistview_item_padding"
-        android:layout_weight="3">
+        android:padding="@dimen/mylistview_item_padding">
 
         <ImageView
             android:id="@+id/mylistview_item_image"
-            android:layout_width="match_parent"
+            android:layout_width="@dimen/mylistview_item_image_width"
             android:layout_height="match_parent"
             android:layout_gravity="center"
             android:scaleType="centerCrop"
