--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,14 +3,13 @@
     <dimen name="toolbar_searchtext_margin_left">8dp</dimen>
     <dimen name="toolbar_searchtext_margin_top">10dp</dimen>
 
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
-
-    <dimen name="nav_header_vertical_spacing">8dp</dimen>
-    <dimen name="nav_header_height">176dp</dimen>
+    <dimen name="drawer_horizontal_margin">16dp</dimen>
+    <dimen name="drawer_header_spacing">10dp</dimen>
+    <dimen name="drawer_header_height">96dp</dimen>
     <dimen name="text_margin">16dp</dimen>
     
     <dimen name="mylistview_item_padding">10dp</dimen>
     <dimen name="mylistview_item_height">100dp</dimen>
+    <dimen name="mylistview_item_image_width">80dp</dimen>
     <dimen name="mylistview_item_titlesize">20dp</dimen>
 </resources>
