load image from intenet

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,7 @@
         android:layout_gravity="start">
 
         <ImageView
+            android:id="@+id/drawer_background"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:src="@mipmap/back"
