--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -34,7 +34,7 @@
                     android:text="腾讯 QQ | 微信 | Bilibili"
                     android:gravity="left|center"
                     android:singleLine="true"
-                    android:textColor="?attr/text_color"/>
+                    android:textColor="?attr/edge_color"/>
 
             </LinearLayout>
 
