--- a/app/src/main/res/layout/main_drawer.xml
+++ b/app/src/main/res/layout/main_drawer.xml
@@ -4,47 +4,46 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@drawable/alpha_change">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/drawer_header_height"
-        android:gravity="bottom"
         android:orientation="horizontal"
-
-
-        android:background="#88444444"
         android:paddingLeft="@dimen/drawer_horizontal_margin"
         android:paddingRight="@dimen/drawer_horizontal_margin">
-
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="72dp"
-            android:layout_height="72dp"
-            android:contentDescription="@string/nav_header_desc"
-            android:layout_marginRight="@dimen/drawer_header_spacing"
-            app:srcCompat="@drawable/ic_menu_camera"
-            android:layout_gravity="center"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_gravity="center">
+            android:layout_gravity="bottom">
 
-            <TextView
+            <ImageView
+                android:id="@+id/drawer_imageview"
+                android:layout_width="72dp"
+                android:layout_height="72dp"
+                android:padding="10dp"
+                android:contentDescription="@string/nav_header_desc"
+                android:layout_marginRight="@dimen/drawer_spacing"
+                android:src="@drawable/ic_user"
+                android:layout_gravity="center"/>
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/drawer_header_spacing"
-                android:text="Username Here"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+                android:orientation="vertical"
+                android:layout_gravity="center">
 
-            <TextView
-                android:id="@+id/textView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="TEST.TEST.TEST.TEST" />
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="28dp"
+                    android:text="Lightning"
+                    android:textColor="#ffffffff"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
+            </LinearLayout>
         </LinearLayout>
 
     </LinearLayout>
@@ -52,27 +51,48 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#88aaaaaa"
         android:orientation="vertical">
 
         <ListView
             android:id="@+id/drawer_listview"
-            android:divider="@null"
+            android:divider="@android:color/transparent"
+            android:dividerHeight="@dimen/drawer_spacing"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:padding="@dimen/drawer_spacing"
+            android:overScrollMode="never"
+            android:scrollbars="none">
         </ListView>
 
         <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1">
+            android:layout_height="wrap_content"
+            android:padding="10dp">
 
-            <TextView
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="夜间模式"
-                android:padding="20dp"
-                android:layout_gravity="bottom|right"/>
+                android:orientation="horizontal"
+                android:layout_gravity="bottom|right">
+
+                <TextView
+                    android:id="@+id/drawer_dnmode"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="夜间模式"
+                    android:textColor="#ffffffff"
+                    android:padding="10dp"/>
+
+                <TextView
+                    android:id="@+id/drawer_settings"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="设置"
+                    android:textColor="#ffffffff"
+                    android:padding="10dp"/>
+
+            </LinearLayout>
 
         </FrameLayout>
 
