--- a/app/src/main/res/layout/mylistview_item.xml
+++ b/app/src/main/res/layout/mylistview_item.xml
@@ -8,6 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/mylistview_item_height"
         android:layout_weight="1"
+        android:layout_gravity="center"
         android:orientation="vertical">
 
         <TextView
@@ -17,6 +18,7 @@
             android:layout_weight="1"
             android:padding="@dimen/mylistview_item_padding"
             android:textSize="@dimen/mylistview_item_titlesize"
+            android:textColor="?attr/text_color"
             android:text="这是一个标题这是一个标题这是一个标题这是一个标题"/>
 
         <TextView
@@ -26,6 +28,8 @@
             android:layout_weight="2"
             android:paddingLeft="@dimen/mylistview_item_padding"
             android:paddingBottom="@dimen/mylistview_item_padding"
+            android:textColor="?attr/text_color"
+            android:textSize="@dimen/mylistview_item_subtitlesize"
             android:text="some descriptions here"/>
 
     </LinearLayout>
@@ -34,7 +38,8 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="@dimen/mylistview_item_height"
-        android:padding="@dimen/mylistview_item_padding">
+        android:padding="@dimen/mylistview_item_padding"
+        android:layout_gravity="center">
 
         <ImageView
             android:id="@+id/mylistview_item_image"
