--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,12 +4,15 @@
     <dimen name="toolbar_searchtext_margin_top">10dp</dimen>
 
     <dimen name="drawer_horizontal_margin">16dp</dimen>
-    <dimen name="drawer_header_spacing">10dp</dimen>
-    <dimen name="drawer_header_height">96dp</dimen>
+    <dimen name="drawer_header_height">128dp</dimen>
+    <dimen name="drawer_spacing">20dp</dimen>
+
     <dimen name="text_margin">16dp</dimen>
     
     <dimen name="mylistview_item_padding">10dp</dimen>
     <dimen name="mylistview_item_height">100dp</dimen>
     <dimen name="mylistview_item_image_width">80dp</dimen>
-    <dimen name="mylistview_item_titlesize">20dp</dimen>
+    <dimen name="mylistview_item_titlesize">18dp</dimen>
+    <dimen name="mylistview_item_subtitlesize">12dp</dimen>
+
 </resources>
