--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,7 +10,7 @@
         
         <item name="background_color">#ffffffff</item>
         <item name="text_color">#ff000000</item>
-        <item name="edge_color">#FF232323</item>
+        <item name="edge_color">#FFFFFFFF</item>
         <item name="highlight_color">@color/colorPrimary</item>
         <item name="undertint_color">#FF585858</item>
         
@@ -18,13 +18,14 @@
     </style>
 
     <style name="Mytheme.Night" parent="Mytheme">
-        <item name="colorPrimary">@color/colorPrimaryDark</item>
+        <item name="colorPrimary">#ff111111</item>
         <item name="colorPrimaryDark">@color/colorSecondaryDark</item>
 
-        <item name="background_color">#ff222222</item>
-        <item name="text_color">#ff888888</item>
-        <item name="edge_color">#ff666666</item>
-        <item name="highlight_color">#ff888888</item>
+        <item name="background_color">#ff333338</item>
+        <item name="text_color">#ffBBBBBB</item>
+        <item name="edge_color">#ffDDDDDD</item>
+        <item name="highlight_color">#ffffffff</item>
+        <item name="undertint_color">#FF585858</item>
     </style>
 
 </resources>
