--- a/app/src/main/res/layout/tabicon_item.xml
+++ b/app/src/main/res/layout/tabicon_item.xml
@@ -16,7 +16,7 @@
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:layout_gravity="center"
-            android:src="@drawable/ic_menu_manage"/>
+            android:src="@drawable/ic_user"/>
 
         <TextView
             android:id="@+id/tabicon_item_text"
