--- a/app/src/main/res/layout/mylistview_item_default.xml
+++ b/app/src/main/res/layout/mylistview_item_default.xml
@@ -47,7 +47,7 @@
             android:layout_height="match_parent"
             android:layout_gravity="center"
             android:scaleType="centerCrop"
-            android:src="@mipmap/test"/>
+            android:src="@drawable/ic_broken_image"/>
 
     </LinearLayout>
 
