complex listitem: fix the code structure

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -41,6 +41,8 @@
             app:tabPaddingStart="-1dp"
             app:tabPaddingEnd="-1dp"
             app:tabIndicatorColor="?attr/highlight_color"
+
+            app:tabRippleColor="@android:color/transparent"
             app:tabMode="fixed">
         </com.google.android.material.tabs.TabLayout>
 
