--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,6 +7,8 @@
     <dimen name="drawer_header_height">128dp</dimen>
     <dimen name="drawer_spacing">20dp</dimen>
 
+    <dimen name="title_text_size">22dp</dimen>
+
     <dimen name="text_margin">16dp</dimen>
     
     <dimen name="mylistview_item_padding">10dp</dimen>
