--- a/app/src/main/res/groups/fragments/layout/fragment_page.xml
+++ b/app/src/main/res/groups/fragments/layout/fragment_page.xml
@@ -60,6 +60,7 @@
 
 
             <TextView
+                android:id="@+id/channel_manager_label"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginHorizontal="10dp"
