--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -5,6 +5,7 @@
         <attr name="text_color" format="color" />
         <attr name="edge_color" format="color" />
         <attr name="background_color" format="color" />
+        <attr name="background2_color" format="color" />
         <attr name="highlight_color" format="color" />
         <attr name="undertint_color" format="color" />
         <attr name="separator_color" format="color" />
