--- a/app/src/main/res/groups/channel/layout/activity_channel.xml
+++ b/app/src/main/res/groups/channel/layout/activity_channel.xml
@@ -6,41 +6,31 @@
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:background="?attr/background_color"
-    tools:context=".SearchActivity">
+    tools:context=".ChannelActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <androidx.appcompat.widget.Toolbar
-            android:id="@+id/search_toolbar"
+            android:id="@+id/channel_toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="?attr/colorPrimary">
 
-            <LinearLayout
-                android:layout_height="match_parent"
+            <TextView
                 android:layout_width="match_parent"
-                android:orientation="horizontal"
-                android:paddingRight="15dp"
-                android:paddingLeft="0dp"
-                android:layout_marginLeft="0dp">
-
-                <androidx.appcompat.widget.SearchView
-                    android:id="@+id/search_view"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"/>
-
-            </LinearLayout>
+                android:layout_height="match_parent"
+                android:text="频道管理"
+                android:textSize="@dimen/title_text_size"
+                android:textColor="?attr/edge_color"/>
 
         </androidx.appcompat.widget.Toolbar>
     </com.google.android.material.appbar.AppBarLayout>
 
-    <com.chen91apps.echos.views.MyListView
-        android:id="@+id/list_search"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/channel_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent" />
 
-    </com.chen91apps.echos.views.MyListView>
 </LinearLayout>
