--- a/app/src/main/res/groups/activities/layout/activity_search_result.xml
+++ b/app/src/main/res/groups/activities/layout/activity_search_result.xml
@@ -6,39 +6,30 @@
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:background="?attr/background_color"
-    tools:context=".SearchActivity">
+    tools:context=".SearchResultActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <androidx.appcompat.widget.Toolbar
-            android:id="@+id/search_toolbar"
+            android:id="@+id/search_result_toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="?attr/colorPrimary">
 
-            <LinearLayout
-                android:layout_height="match_parent"
+            <TextView
+                android:id="@+id/search_result_text"
                 android:layout_width="match_parent"
-                android:orientation="horizontal"
-                android:paddingRight="15dp"
-                android:paddingLeft="0dp"
-                android:layout_marginLeft="0dp">
-
-                <androidx.appcompat.widget.SearchView
-                    android:id="@+id/search_view"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"/>
-
-            </LinearLayout>
+                android:layout_height="match_parent"
+                android:textSize="@dimen/title_text_size"
+                android:textColor="?attr/edge_color"/>
 
         </androidx.appcompat.widget.Toolbar>
     </com.google.android.material.appbar.AppBarLayout>
 
     <com.chen91apps.echos.views.MyListView
-        android:id="@+id/list_search"
+        android:id="@+id/list_search_result"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
