--- a/app/src/main/res/groups/fragments/layout/fragment_image.xml
+++ b/app/src/main/res/groups/fragments/layout/fragment_image.xml
@@ -6,6 +6,7 @@
     tools:context=".fragments.ImageFragment">
 
     <ImageView
+        android:id="@+id/image_in_fragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
 
