--- a/app/src/main/res/groups/fragments/layout/fragment_video.xml
+++ b/app/src/main/res/groups/fragments/layout/fragment_video.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     tools:context=".fragments.VideoFragment">
 
-    <com.google.android.exoplayer2.ui.PlayerView
+    <cn.jzvd.JZVideoPlayerStandard
         android:id="@+id/view_video"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
