--- a/app/src/main/res/groups/maindrawer/layout/main_drawer.xml
+++ b/app/src/main/res/groups/maindrawer/layout/main_drawer.xml
@@ -36,6 +36,7 @@
                 android:layout_gravity="center">
 
                 <TextView
+                    android:id="@+id/username_textview"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="28dp"
