--- a/app/src/main/res/groups/activities/layout/activity_login.xml
+++ b/app/src/main/res/groups/activities/layout/activity_login.xml
@@ -71,11 +71,13 @@
                 android:orientation="horizontal">
 
                 <Button
+                    android:id="@+id/button_login"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="登录"/>
 
                 <Button
+                    android:id="@+id/button_signup"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="注册"/>
