--- a/app/src/main/res/groups/activities/layout/activity_user_info.xml
+++ b/app/src/main/res/groups/activities/layout/activity_user_info.xml
@@ -62,6 +62,7 @@
                     android:padding="10dp"/>
 
                 <TextView
+                    android:id="@id/username_textview"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -119,13 +120,14 @@
                 android:layout_marginTop="5dp">
 
                 <TextView
+                    android:id="@+id/logout"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
 
                     android:text="退出登录"
 
-                    android:textSize="10dp"
+                    android:textSize="12dp"
                     android:textColor="?attr/undertint_color"
                     android:padding="5dp"
                     android:gravity="end|center_vertical"/>
