--- a/app/src/main/res/groups/activities/layout/activity_view.xml
+++ b/app/src/main/res/groups/activities/layout/activity_view.xml
@@ -46,7 +46,7 @@
                 android:text="这是一个标题"
                 android:textStyle="bold"
                 android:textColor="?attr/text_color"
-                android:textSize="40dp"/>
+                android:textSize="28dp"/>
 
             <TextView
                 android:layout_width="match_parent"
@@ -63,6 +63,7 @@
             </androidx.viewpager.widget.ViewPager>
 
             <TextView
+                android:id="@+id/view_tip"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="左右滑动查看更多图片/视频"
