--- a/app/src/main/res/groups/activities/layout/settings_activity.xml
+++ b/app/src/main/res/groups/activities/layout/settings_activity.xml
@@ -23,10 +23,34 @@
         </androidx.appcompat.widget.Toolbar>
     </com.google.android.material.appbar.AppBarLayout>
 
-    <FrameLayout
+    <LinearLayout
         android:id="@+id/settings"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="?attr/background_color"
-        android:paddingTop="5dp"/>
+        android:orientation="vertical"
+        android:background="?attr/background2_color"
+        android:paddingTop="5dp">
+        <TextView
+            android:id="@+id/setting_clearbuffer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:layout_margin="5dp"
+            android:background="?attr/background_color"
+            android:textColor="?attr/text_color"
+            android:text="清除缓存"
+            android:textSize="30dp"
+            />
+        <TextView
+            android:id="@+id/settings_about"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:layout_margin="5dp"
+            android:background="?attr/background_color"
+            android:textColor="?attr/text_color"
+            android:text="关于"
+            android:textSize="30dp"
+            />
+    </LinearLayout>
 </LinearLayout>
