--- a/app/src/main/res/groups/activities/layout/activity_user_info.xml
+++ b/app/src/main/res/groups/activities/layout/activity_user_info.xml
@@ -68,6 +68,7 @@
                     android:layout_weight="1"
 
                     android:text="Lightning"
+                    android:clickable="false"
 
                     android:textSize="16dp"
                     android:textColor="?attr/undertint_color"
@@ -84,6 +85,7 @@
                 android:orientation="horizontal"
                 android:layout_marginTop="5dp"
                 android:clickable="true"
+                android:visibility="gone"
                 android:background="?attr/background_color">
 
                 <TextView
