--- a/app/src/main/res/groups/activities/layout/activity_view.xml
+++ b/app/src/main/res/groups/activities/layout/activity_view.xml
@@ -21,7 +21,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="新闻"
+                android:text="查看内容"
                 android:textSize="@dimen/title_text_size"
                 android:textColor="?attr/edge_color"/>
 
