--- a/app/src/main/res/groups/tabitem/layout/texticon_item.xml
+++ b/app/src/main/res/groups/tabitem/layout/texticon_item.xml
@@ -16,7 +16,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="新闻"
-            android:textColor="?attr/edge_color"/>
+            android:textColor="?attr/undertint_color"/>
 
     </LinearLayout>
 
