--- a/app/src/main/res/groups/channel/layout/adapter_button.xml
+++ b/app/src/main/res/groups/channel/layout/adapter_button.xml
@@ -10,7 +10,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
-        android:hint="标题"/>
+        android:hint="标题"
+        android:cursorVisible="true"
+        android:textCursorDrawable="@drawable/textedit_cursor"/>
 
     <EditText
         android:id="@+id/rss_url"
@@ -18,7 +20,9 @@
         android:layout_height="wrap_content"
         android:inputType="textUri"
         android:imeOptions="actionNone"
-        android:hint="RSS 地址"/>
+        android:hint="RSS 地址"
+        android:cursorVisible="true"
+        android:textCursorDrawable="@drawable/textedit_cursor"/>
 
     <LinearLayout
         android:layout_width="match_parent"
