--- a/app/src/main/res/groups/mainactivaty/layout/comment_item.xml
+++ b/app/src/main/res/groups/mainactivaty/layout/comment_item.xml
@@ -4,7 +4,8 @@
     android:layout_height="match_parent"
     android:background="?attr/background_color"
     android:orientation="vertical"
-    android:padding="20dp">
+    android:padding="20dp"
+    android:gravity="center">
 
     <LinearLayout
         android:id="@+id/comment_quote"
@@ -12,7 +13,8 @@
         android:layout_height="wrap_content"
         android:background="?attr/background2_color"
         android:orientation="vertical"
-        android:padding="10dp">
+        android:padding="10dp"
+        android:layout_marginBottom="10dp">
 
         <TextView
             android:id="@+id/comment_quote_user"
@@ -27,15 +29,27 @@
             android:layout_height="wrap_content"
             android:textColor="?attr/undertint_color"
             android:text="哈哈哈哈，这是评论的内容"
-            android:padding="10dp"/>
-
-        <TextView
-            android:id="@+id/comment_quote_time"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="?attr/undertint_color"
-            android:text="时间："/>
+            android:padding="5dp"/>
 
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/comment_content"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="?attr/text_color"
+        android:text="哈哈哈哈，这是评论的内容"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
+        android:paddingBottom="5dp"
+        />
+
+    <TextView
+        android:id="@+id/comment_user_and_time"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="?attr/text_color"
+        android:gravity="right"
+        android:text="lightning 发布与 2019.10.10"/>
 
 </LinearLayout>
