--- a/app/src/main/res/groups/mainactivaty/layout/activity_comment_area.xml
+++ b/app/src/main/res/groups/mainactivaty/layout/activity_comment_area.xml
@@ -62,6 +62,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:cursorVisible="true"
+                android:imeOptions="actionNone"
                 android:textCursorDrawable="@drawable/textedit_cursor"/>
 
             <Button
