--- a/app/src/main/res/groups/mainactivaty/layout/activity_comment_area.xml
+++ b/app/src/main/res/groups/mainactivaty/layout/activity_comment_area.xml
@@ -63,6 +63,7 @@
                 android:layout_weight="1"
                 android:cursorVisible="true"
                 android:imeOptions="actionNone"
+                android:textColor="?attr/text_color"
                 android:textCursorDrawable="@drawable/textedit_cursor"/>
 
             <Button
