--- a/app/src/main/res/groups/activities/layout/activity_view.xml
+++ b/app/src/main/res/groups/activities/layout/activity_view.xml
@@ -103,6 +103,7 @@
                     android:id="@+id/view_src"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textColor="?attr/text_color"
                     android:text="腾讯新闻"/>
             </LinearLayout>
 
@@ -123,6 +124,7 @@
                     android:id="@+id/view_category"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textColor="?attr/text_color"
                     android:text="科技"/>
             </LinearLayout>
 
@@ -143,6 +145,7 @@
                     android:id="@+id/view_author"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textColor="?attr/text_color"
                     android:text="陈先生"/>
             </LinearLayout>
 
@@ -163,6 +166,7 @@
                     android:id="@+id/view_time"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textColor="?attr/text_color"
                     android:text="1926 年 8 月 14 日"/>
             </LinearLayout>
 
@@ -183,6 +187,7 @@
                     android:id="@+id/view_url"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:textColor="?attr/text_color"
                     android:text="https://www.baidu.com"/>
             </LinearLayout>
 
